--- a/Dev Tester/DevTest.csproj
+++ b/Dev Tester/DevTest.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 		<ProjectReference Include="..\DataAccess\DataAccess.csproj" />
 		<ProjectReference Include="..\DTOs\DTOs.csproj" />
 	</ItemGroup>
